# PlausiDen-LFI

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  UPSTREAM.md
crates/lfi-core/: Cargo.toml
crates/lfi-core/src/: lib.rs
crates/lfi-corpus/: Cargo.toml
crates/lfi-corpus/src/: hdc_encoder.rs  lib.rs
crates/lfi-critic/: CALLING_CONVENTION.md  Cargo.toml
crates/lfi-critic/src/: lib.rs
crates/lfi-policy/: Cargo.toml
crates/lfi-policy/src/: canonical.rs  lib.rs
