[package]
name = "lfi-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Typed core transport for the Lattice of Formal Inference: Proposal, Decision, RuleId, Strength, Violation."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# lfi-core is the typed transport layer ONLY. It intentionally
# does not depend on any Neurosymbolic-Toolkit (NSTK) substrate.
# Keeping it lean lets downstream forks (Forge-LFI, app-specific
# Critics) swap or omit substrates without rebuilding transport
# types.
#
# NSTK consumption is delegated to the substrate-consuming crates:
#   * lfi-corpus → hdc-core (feature-gated `hdc-encoder`)
#   * lfi-policy → neupsl (#35 — pending wiring)
#   * future: lnn / vsa / hdlm / math-codec on demand
#
# Closes #34 by making the architectural decision explicit:
# "consume NSTK" was the right outcome, but at the substrate-
# consuming layer, not in lfi-core itself.

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
