[package]
name = "lfi-corpus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "HDC-encoded curated patterns + per-tenant private corpora."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lfi-core = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
