[package]
name = "lfi-corpus"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "HDC-encoded curated patterns + per-tenant private corpora."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lfi-core = { workspace = true }

# Opt-in: Neurosymbolic-Toolkit's hdc-core for the canonical
# Pattern::vector_b64 <-> BipolarVector codec. Consumers that
# bring their own encoder (or use a different substrate) don't
# pay the NSTK compile cost.
hdc-core = { workspace = true, optional = true }
base64   = { workspace = true, optional = true }

[features]
default = []
# Enable the canonical HDC encoder/decoder via NSTK hdc-core.
# Off by default so downstream forks that use a different
# substrate (or none) stay lean.
hdc-encoder = ["dep:hdc-core", "dep:base64"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
