[package]
name = "lfi-policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "NeuPSL (Probabilistic Soft Logic) DSL — typed weighted rules, atoms, constraints."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lfi-core = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
